--- a/webview2/app/src/main/AndroidManifest.xml
+++ b/webview2/app/src/main/AndroidManifest.xml
@@ -7,15 +7,16 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ssficono"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ssficono"
         android:supportsRtl="true"
         android:largeHeap="true"
-        android:theme="@style/AppTheme"
+        android:theme="@style/AppTheme.SplashTheme"
 
         >
-        <activity android:name=".MainActivity">
+        <activity android:name=".SplashActivity"
+            android:theme="@style/AppTheme.SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -31,6 +32,11 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths"/>
         </provider>
+
+        <activity
+            android:name=".MainActivity"
+            android:label="MainActivity"/>
     </application>
+
 
 </manifest>
