--- a/MaterialTabsWithFab-master/MaterialTabsWithFab-master/app/build.gradle
+++ b/MaterialTabsWithFab-master/MaterialTabsWithFab-master/app/build.gradle
@@ -3,17 +3,19 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 29
     defaultConfig {
-        applicationId "com.uigitdev.materialtabswithmenu"
+        applicationId "com.gsolano.gnotes"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
     }
+
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
 }
@@ -27,4 +29,9 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
+
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.3.1'
+    //implementation 'com.jakewharton:butterknife:6.1.0'
 }
+
+apply plugin: 'realm-android'
